@@ -30,7 +30,39 @@ POSSIBILITY OF SUCH DAMAGE.
 
 package com.vmware.vim25.mo;
 
-import com.vmware.vim25.*;
+import com.vmware.vim25.DasConfigFault;
+import com.vmware.vim25.HostCapability;
+import com.vmware.vim25.HostConfigFault;
+import com.vmware.vim25.HostConfigInfo;
+import com.vmware.vim25.HostConfigManager;
+import com.vmware.vim25.HostConnectFault;
+import com.vmware.vim25.HostConnectInfo;
+import com.vmware.vim25.HostConnectSpec;
+import com.vmware.vim25.HostFlagInfo;
+import com.vmware.vim25.HostHardwareInfo;
+import com.vmware.vim25.HostIpmiInfo;
+import com.vmware.vim25.HostLicensableResourceInfo;
+import com.vmware.vim25.HostListSummary;
+import com.vmware.vim25.HostMaintenanceSpec;
+import com.vmware.vim25.HostPowerOpFailed;
+import com.vmware.vim25.HostRuntimeInfo;
+import com.vmware.vim25.HostServiceTicket;
+import com.vmware.vim25.HostSystemReconnectSpec;
+import com.vmware.vim25.HostSystemResourceInfo;
+import com.vmware.vim25.HostSystemSwapConfiguration;
+import com.vmware.vim25.HostTpmAttestationReport;
+import com.vmware.vim25.InvalidIpmiLoginInfo;
+import com.vmware.vim25.InvalidIpmiMacAddress;
+import com.vmware.vim25.InvalidLogin;
+import com.vmware.vim25.InvalidName;
+import com.vmware.vim25.InvalidProperty;
+import com.vmware.vim25.InvalidState;
+import com.vmware.vim25.ManagedObjectReference;
+import com.vmware.vim25.NotSupported;
+import com.vmware.vim25.RequestCanceled;
+import com.vmware.vim25.RuntimeFault;
+import com.vmware.vim25.Timedout;
+import com.vmware.vim25.VirtualMachineConfigInfo;
 import com.vmware.vim25.mo.util.MorUtil;
 
 import java.rmi.RemoteException;
@@ -57,11 +89,11 @@ public class HostSystem extends ManagedEntity {
         return (HostConfigInfo) getCurrentProperty("config");
     }
 
-    public Datastore[] getDatastores() throws InvalidProperty, RuntimeFault, RemoteException {
+    public Datastore[] getDatastores() throws RemoteException {
         return getDatastores("datastore");
     }
 
-    public HostDatastoreBrowser getDatastoreBrowser() throws InvalidProperty, RuntimeFault, RemoteException {
+    public HostDatastoreBrowser getDatastoreBrowser() throws RemoteException {
         return (HostDatastoreBrowser) getManagedObject("datastoreBrowser");
     }
 
@@ -76,7 +108,7 @@ public class HostSystem extends ManagedEntity {
         return (HostLicensableResourceInfo) getCurrentProperty("licensableResource");
     }
 
-    public Network[] getNetworks() throws InvalidProperty, RuntimeFault, RemoteException {
+    public Network[] getNetworks() throws RemoteException {
         return getNetworks("network");
     }
 
@@ -92,15 +124,15 @@ public class HostSystem extends ManagedEntity {
         return (HostSystemResourceInfo) getCurrentProperty("systemResources");
     }
 
-    public VirtualMachine[] getVms() throws InvalidProperty, RuntimeFault, RemoteException {
+    public VirtualMachine[] getVms() throws RemoteException {
         return getVms("vm");
     }
 
-    public HostServiceTicket acquireCimServicesTicket() throws RuntimeFault, RemoteException {
+    public HostServiceTicket acquireCimServicesTicket() throws RemoteException {
         return getVimService().acquireCimServicesTicket(getMOR());
     }
 
-    public Task disconnectHost() throws RuntimeFault, RemoteException {
+    public Task disconnectHost() throws RemoteException {
         ManagedObjectReference mor = getVimService().disconnectHost_Task(getMOR());
         return new Task(getServerConnection(), mor);
     }
@@ -108,90 +140,90 @@ public class HostSystem extends ManagedEntity {
     /**
      * @since SDK4.1
      */
-    public void enterLockdownMode() throws HostConfigFault, RuntimeFault, RemoteException {
+    public void enterLockdownMode() throws RemoteException {
         getVimService().enterLockdownMode(getMOR());
     }
 
     /**
      * keep the old signature for compatibility
      */
-    public Task enterMaintenanceMode(int timeout, boolean evacuatePoweredOffVms) throws Timedout, InvalidState, RuntimeFault, RemoteException {
+    public Task enterMaintenanceMode(int timeout, boolean evacuatePoweredOffVms) throws RemoteException {
         return enterMaintenanceMode(timeout, evacuatePoweredOffVms, null);
     }
 
     /**
      * @since SDK5.5
      */
-    public Task enterMaintenanceMode(int timeout, boolean evacuatePoweredOffVms, HostMaintenanceSpec maintenanceSpec) throws Timedout, InvalidState, RuntimeFault, RemoteException {
-        ManagedObjectReference mor = getVimService().enterMaintenanceMode_Task(getMOR(), timeout, new Boolean(evacuatePoweredOffVms), maintenanceSpec);
+    public Task enterMaintenanceMode(int timeout, boolean evacuatePoweredOffVms, HostMaintenanceSpec maintenanceSpec) throws RemoteException {
+        ManagedObjectReference mor = getVimService().enterMaintenanceMode_Task(getMOR(), timeout, Boolean.valueOf(evacuatePoweredOffVms), maintenanceSpec);
         return new Task(getServerConnection(), mor);
     }
 
     /**
      * @since SDK4.1
      */
-    public void exitLockdownMode() throws HostConfigFault, RuntimeFault, RemoteException {
+    public void exitLockdownMode() throws RemoteException {
         getVimService().exitLockdownMode(getMOR());
     }
 
-    public Task exitMaintenanceMode(int timeout) throws Timedout, InvalidState, RuntimeFault, RemoteException {
+    public Task exitMaintenanceMode(int timeout) throws RemoteException {
         ManagedObjectReference mor = getVimService().exitMaintenanceMode_Task(getMOR(), timeout);
         return new Task(getServerConnection(), mor);
     }
 
-    public Task powerDownHostToStandBy(int timeSec, boolean evacuatePoweredOffVms) throws RequestCanceled, HostPowerOpFailed, NotSupported, Timedout, InvalidState, RuntimeFault, RemoteException {
-        ManagedObjectReference mor = getVimService().powerDownHostToStandBy_Task(getMOR(), timeSec, new Boolean(evacuatePoweredOffVms));
+    public Task powerDownHostToStandBy(int timeSec, boolean evacuatePoweredOffVms) throws RemoteException {
+        ManagedObjectReference mor = getVimService().powerDownHostToStandBy_Task(getMOR(), timeSec, Boolean.valueOf(evacuatePoweredOffVms));
         return new Task(getServerConnection(), mor);
     }
 
-    public Task powerUpHostFromStandBy(int timeSec) throws HostPowerOpFailed, NotSupported, Timedout, InvalidState, RuntimeFault, RemoteException {
+    public Task powerUpHostFromStandBy(int timeSec) throws RemoteException {
         ManagedObjectReference mor = getVimService().powerUpHostFromStandBy_Task(getMOR(), timeSec);
         return new Task(getServerConnection(), mor);
     }
 
-    public HostConnectInfo queryHostConnectionInfo() throws RuntimeFault, RemoteException {
+    public HostConnectInfo queryHostConnectionInfo() throws RemoteException {
         return getVimService().queryHostConnectionInfo(getMOR());
     }
 
     /**
      * @since SDK5.1
      */
-    public HostTpmAttestationReport queryTpmAttestationReport() throws RuntimeFault, RemoteException {
+    public HostTpmAttestationReport queryTpmAttestationReport() throws RemoteException {
         return getVimService().queryTpmAttestationReport(getMOR());
     }
 
     /**
      * @since SDK5.1
      */
-    public void updateSystemSwapConfiguration(HostSystemSwapConfiguration sysSwapConfig) throws RuntimeFault, RemoteException {
+    public void updateSystemSwapConfiguration(HostSystemSwapConfiguration sysSwapConfig) throws RemoteException {
         getVimService().updateSystemSwapConfiguration(getMOR(), sysSwapConfig);
     }
 
-    public long queryMemoryOverhead(long memorySize, int videoRamSize, int numVcpus) throws RuntimeFault, RemoteException {
+    public long queryMemoryOverhead(long memorySize, int videoRamSize, int numVcpus) throws RemoteException {
         return getVimService().queryMemoryOverhead(getMOR(), memorySize, new Integer(videoRamSize), numVcpus);
     }
 
-    public long queryMemoryOverheadEx(VirtualMachineConfigInfo vmConfigInfo) throws RuntimeFault, RemoteException {
+    public long queryMemoryOverheadEx(VirtualMachineConfigInfo vmConfigInfo) throws RemoteException {
         return getVimService().queryMemoryOverheadEx(getMOR(), vmConfigInfo);
     }
 
-    public Task rebootHost(boolean force) throws InvalidState, RuntimeFault, RemoteException {
+    public Task rebootHost(boolean force) throws RemoteException {
         ManagedObjectReference mor = getVimService().rebootHost_Task(getMOR(), force);
         return new Task(getServerConnection(), mor);
     }
 
-    public Task reconfigureHostForDAS() throws DasConfigFault, RuntimeFault, RemoteException {
+    public Task reconfigureHostForDAS() throws RemoteException {
         ManagedObjectReference mor = getVimService().reconfigureHostForDAS_Task(getMOR());
         return new Task(getServerConnection(), mor);
     }
 
     //SDK4.1 signature for back compatibility
-    public Task reconnectHost_Task(HostConnectSpec hcs) throws InvalidName, InvalidLogin, InvalidState, HostConnectFault, RuntimeFault, RemoteException {
+    public Task reconnectHost_Task(HostConnectSpec hcs) throws RemoteException {
         return reconnectHost_Task(hcs, null);
     }
 
     //SDK5.0 signature
-    public Task reconnectHost_Task(HostConnectSpec cnxSpec, HostSystemReconnectSpec reconnectSpec) throws InvalidName, InvalidLogin, InvalidState, HostConnectFault, RuntimeFault, RemoteException {
+    public Task reconnectHost_Task(HostConnectSpec cnxSpec, HostSystemReconnectSpec reconnectSpec) throws RemoteException {
         ManagedObjectReference mor = getVimService().reconnectHost_Task(getMOR(), cnxSpec, reconnectSpec);
         return new Task(getServerConnection(), mor);
     }
@@ -199,206 +231,206 @@ public class HostSystem extends ManagedEntity {
     /**
      * @since SDK4.1
      */
-    public long retrieveHardwareUptime() throws RuntimeFault, RemoteException {
+    public long retrieveHardwareUptime() throws RemoteException {
         return getVimService().retrieveHardwareUptime(getMOR());
     }
 
-    public Task shutdownHost_Task(boolean force) throws InvalidState, NotSupported, RuntimeFault, RemoteException {
+    public Task shutdownHost_Task(boolean force) throws RemoteException {
         ManagedObjectReference mor = getVimService().shutdownHost_Task(getMOR(), force);
         return new Task(getServerConnection(), mor);
     }
 
-    public void updateFlags(HostFlagInfo hfi) throws RuntimeFault, RemoteException {
+    public void updateFlags(HostFlagInfo hfi) throws RemoteException {
         getVimService().updateFlags(getMOR(), hfi);
     }
 
-    public void updateSystemResources(HostSystemResourceInfo resourceInfo) throws RuntimeFault, RemoteException {
+    public void updateSystemResources(HostSystemResourceInfo resourceInfo) throws RemoteException {
         getVimService().updateSystemResources(getMOR(), resourceInfo);
     }
 
     /**
      * @since 4.0
      */
-    public void updateIpmi(HostIpmiInfo ipmiInfo) throws InvalidIpmiLoginInfo, InvalidIpmiMacAddress, RuntimeFault, RemoteException {
+    public void updateIpmi(HostIpmiInfo ipmiInfo) throws RemoteException {
         getVimService().updateIpmi(getMOR(), ipmiInfo);
     }
 
-    private HostConfigManager getConfigManager() throws InvalidProperty, RuntimeFault, RemoteException {
+    private HostConfigManager getConfigManager() throws RemoteException {
         if (configManager == null) {
             configManager = (HostConfigManager) getCurrentProperty("configManager");
         }
         return configManager;
     }
 
-    public OptionManager getOptionManager() throws InvalidProperty, RuntimeFault, RemoteException {
+    public OptionManager getOptionManager() throws RemoteException {
         return new OptionManager(getServerConnection(),
-            getConfigManager().getAdvancedOption());
+                getConfigManager().getAdvancedOption());
     }
 
-    public HostAutoStartManager getHostAutoStartManager() throws InvalidProperty, RuntimeFault, RemoteException {
+    public HostAutoStartManager getHostAutoStartManager() throws RemoteException {
         return new HostAutoStartManager(getServerConnection(),
-            getConfigManager().getAutoStartManager());
+                getConfigManager().getAutoStartManager());
     }
 
-    public HostBootDeviceSystem getHostBootDeviceSystem() throws InvalidProperty, RuntimeFault, RemoteException {
+    public HostBootDeviceSystem getHostBootDeviceSystem() throws RemoteException {
         return (HostBootDeviceSystem) MorUtil.createExactManagedObject(getServerConnection(),
-            getConfigManager().getBootDeviceSystem());
+                getConfigManager().getBootDeviceSystem());
     }
 
-    public HostDateTimeSystem getHostDateTimeSystem() throws InvalidProperty, RuntimeFault, RemoteException {
+    public HostDateTimeSystem getHostDateTimeSystem() throws RemoteException {
         return (HostDateTimeSystem) MorUtil.createExactManagedObject(getServerConnection(),
-            getConfigManager().getDateTimeSystem());
+                getConfigManager().getDateTimeSystem());
     }
 
-    public HostDiagnosticSystem getHostDiagnosticSystem() throws InvalidProperty, RuntimeFault, RemoteException {
+    public HostDiagnosticSystem getHostDiagnosticSystem() throws RemoteException {
         return (HostDiagnosticSystem) MorUtil.createExactManagedObject(getServerConnection(),
-            getConfigManager().getDiagnosticSystem());
+                getConfigManager().getDiagnosticSystem());
     }
 
-    public HostEsxAgentHostManager getHostEsxAgentHostManager() throws InvalidProperty, RuntimeFault, RemoteException {
+    public HostEsxAgentHostManager getHostEsxAgentHostManager() throws RemoteException {
         return (HostEsxAgentHostManager) MorUtil.createExactManagedObject(getServerConnection(),
-            getConfigManager().getEsxAgentHostManager());
+                getConfigManager().getEsxAgentHostManager());
     }
 
-    public HostCacheConfigurationManager getHostCacheConfigurationManager() throws InvalidProperty, RuntimeFault, RemoteException {
+    public HostCacheConfigurationManager getHostCacheConfigurationManager() throws RemoteException {
         return (HostCacheConfigurationManager) MorUtil.createExactManagedObject(getServerConnection(),
-            getConfigManager().getCacheConfigurationManager());
+                getConfigManager().getCacheConfigurationManager());
     }
 
-    public HostCpuSchedulerSystem getHostCpuSchedulerSystem() throws InvalidProperty, RuntimeFault, RemoteException {
+    public HostCpuSchedulerSystem getHostCpuSchedulerSystem() throws RemoteException {
         return (HostCpuSchedulerSystem) MorUtil.createExactManagedObject(getServerConnection(),
-            getConfigManager().getCpuScheduler());
+                getConfigManager().getCpuScheduler());
     }
 
-    public HostDatastoreSystem getHostDatastoreSystem() throws InvalidProperty, RuntimeFault, RemoteException {
+    public HostDatastoreSystem getHostDatastoreSystem() throws RemoteException {
         return (HostDatastoreSystem) MorUtil.createExactManagedObject(getServerConnection(),
-            getConfigManager().getDatastoreSystem());
+                getConfigManager().getDatastoreSystem());
     }
 
-    public HostFirmwareSystem getHostFirmwareSystem() throws InvalidProperty, RuntimeFault, RemoteException {
+    public HostFirmwareSystem getHostFirmwareSystem() throws RemoteException {
         return (HostFirmwareSystem) MorUtil.createExactManagedObject(getServerConnection(),
-            getConfigManager().getFirmwareSystem());
+                getConfigManager().getFirmwareSystem());
     }
 
     /**
      * @since SDK5.5
      */
-    public HostGraphicsManager getHostGraphicsManager() throws InvalidProperty, RuntimeFault, RemoteException {
+    public HostGraphicsManager getHostGraphicsManager() throws RemoteException {
         return (HostGraphicsManager) MorUtil.createExactManagedObject(getServerConnection(),
-            getConfigManager().getGraphicsManager());
+                getConfigManager().getGraphicsManager());
     }
 
     /**
      * @since SDK4.0
      */
-    public HostKernelModuleSystem getHostKernelModuleSystem() throws InvalidProperty, RuntimeFault, RemoteException {
+    public HostKernelModuleSystem getHostKernelModuleSystem() throws RemoteException {
         return (HostKernelModuleSystem) MorUtil.createExactManagedObject(getServerConnection(),
-            getConfigManager().getKernelModuleSystem());
+                getConfigManager().getKernelModuleSystem());
     }
 
     /**
      * @since SDK4.0
      */
-    public LicenseManager getLicenseManager() throws InvalidProperty, RuntimeFault, RemoteException {
+    public LicenseManager getLicenseManager() throws RemoteException {
         return (LicenseManager) MorUtil.createExactManagedObject(getServerConnection(),
-            getConfigManager().getLicenseManager());
+                getConfigManager().getLicenseManager());
     }
 
     /**
      * @since SDK4.0
      */
-    public HostPciPassthruSystem getHostPciPassthruSystem() throws InvalidProperty, RuntimeFault, RemoteException {
+    public HostPciPassthruSystem getHostPciPassthruSystem() throws RemoteException {
         return (HostPciPassthruSystem) MorUtil.createExactManagedObject(getServerConnection(),
-            getConfigManager().getPciPassthruSystem());
+                getConfigManager().getPciPassthruSystem());
     }
 
     /**
      * @since SDK4.0
      */
-    public HostVirtualNicManager getHostVirtualNicManager() throws InvalidProperty, RuntimeFault, RemoteException {
+    public HostVirtualNicManager getHostVirtualNicManager() throws RemoteException {
         return (HostVirtualNicManager) MorUtil.createExactManagedObject(getServerConnection(),
-            getConfigManager().getVirtualNicManager());
+                getConfigManager().getVirtualNicManager());
     }
 
-    public HostHealthStatusSystem getHealthStatusSystem() throws InvalidProperty, RuntimeFault, RemoteException {
+    public HostHealthStatusSystem getHealthStatusSystem() throws RemoteException {
         return (HostHealthStatusSystem) MorUtil.createExactManagedObject(getServerConnection(),
-            getConfigManager().getHealthStatusSystem());
+                getConfigManager().getHealthStatusSystem());
     }
 
-    public HostFirewallSystem getHostFirewallSystem() throws InvalidProperty, RuntimeFault, RemoteException {
+    public HostFirewallSystem getHostFirewallSystem() throws RemoteException {
         return (HostFirewallSystem) MorUtil.createExactManagedObject(getServerConnection(),
-            getConfigManager().getFirewallSystem());
+                getConfigManager().getFirewallSystem());
     }
 
-    public HostImageConfigManager getHostImageConfigManager() throws InvalidProperty, RuntimeFault, RemoteException {
+    public HostImageConfigManager getHostImageConfigManager() throws RemoteException {
         return (HostImageConfigManager) MorUtil.createExactManagedObject(getServerConnection(),
-            getConfigManager().getImageConfigManager());
+                getConfigManager().getImageConfigManager());
     }
 
-    public HostMemorySystem getHostMemorySystem() throws InvalidProperty, RuntimeFault, RemoteException {
+    public HostMemorySystem getHostMemorySystem() throws RemoteException {
         return (HostMemorySystem) MorUtil.createExactManagedObject(getServerConnection(),
-            getConfigManager().getMemoryManager());
+                getConfigManager().getMemoryManager());
     }
 
-    public HostNetworkSystem getHostNetworkSystem() throws InvalidProperty, RuntimeFault, RemoteException {
+    public HostNetworkSystem getHostNetworkSystem() throws RemoteException {
         return (HostNetworkSystem) MorUtil.createExactManagedObject(getServerConnection(),
-            getConfigManager().getNetworkSystem());
+                getConfigManager().getNetworkSystem());
     }
 
-    public HostPatchManager getHostPatchManager() throws InvalidProperty, RuntimeFault, RemoteException {
+    public HostPatchManager getHostPatchManager() throws RemoteException {
         return (HostPatchManager) MorUtil.createExactManagedObject(getServerConnection(),
-            getConfigManager().getPatchManager());
+                getConfigManager().getPatchManager());
     }
 
-    public HostServiceSystem getHostServiceSystem() throws InvalidProperty, RuntimeFault, RemoteException {
+    public HostServiceSystem getHostServiceSystem() throws RemoteException {
         return (HostServiceSystem) MorUtil.createExactManagedObject(getServerConnection(),
-            getConfigManager().getServiceSystem());
+                getConfigManager().getServiceSystem());
     }
 
-    public HostSnmpSystem getHostSnmpSystem() throws InvalidProperty, RuntimeFault, RemoteException {
+    public HostSnmpSystem getHostSnmpSystem() throws RemoteException {
         return (HostSnmpSystem) MorUtil.createExactManagedObject(getServerConnection(),
-            getConfigManager().getSnmpSystem());
+                getConfigManager().getSnmpSystem());
     }
 
-    public HostStorageSystem getHostStorageSystem() throws InvalidProperty, RuntimeFault, RemoteException {
+    public HostStorageSystem getHostStorageSystem() throws RemoteException {
         return (HostStorageSystem) MorUtil.createExactManagedObject(getServerConnection(),
-            getConfigManager().getStorageSystem());
+                getConfigManager().getStorageSystem());
     }
 
     /**
      * @since SDK5.5
      */
-    public HostVFlashManager getHostVFlashManager() throws InvalidProperty, RuntimeFault, RemoteException {
+    public HostVFlashManager getHostVFlashManager() throws RemoteException {
         return (HostVFlashManager) MorUtil.createExactManagedObject(getServerConnection(),
-            getConfigManager().getVFlashManager());
+                getConfigManager().getVFlashManager());
     }
 
-    public IscsiManager getIscsiManager() throws InvalidProperty, RuntimeFault, RemoteException {
+    public IscsiManager getIscsiManager() throws RemoteException {
         return (IscsiManager) MorUtil.createExactManagedObject(getServerConnection(),
-            getConfigManager().getIscsiManager());
+                getConfigManager().getIscsiManager());
     }
 
     /**
      * @deprecated as of SDK 4.0, use getHostVirtualNicManager instead
      */
-    public HostVMotionSystem getHostVMotionSystem() throws InvalidProperty, RuntimeFault, RemoteException {
+    public HostVMotionSystem getHostVMotionSystem() throws RemoteException {
         return (HostVMotionSystem) MorUtil.createExactManagedObject(getServerConnection(),
-            getConfigManager().getVmotionSystem());
+                getConfigManager().getVmotionSystem());
     }
 
     /**
      * @since SDK5.5
      */
-    public HostVsanInternalSystem getHostVsanInternalSystem() throws InvalidProperty, RuntimeFault, RemoteException {
+    public HostVsanInternalSystem getHostVsanInternalSystem() throws RemoteException {
         return (HostVsanInternalSystem) MorUtil.createExactManagedObject(getServerConnection(),
-            getConfigManager().getVsanInternalSystem());
+                getConfigManager().getVsanInternalSystem());
     }
 
     /**
      * @since SDK5.5
      */
-    public HostVsanSystem getHostVsanSystem() throws InvalidProperty, RuntimeFault, RemoteException {
+    public HostVsanSystem getHostVsanSystem() throws RemoteException {
         return (HostVsanSystem) MorUtil.createExactManagedObject(getServerConnection(),
-            getConfigManager().getVsanSystem());
+                getConfigManager().getVsanSystem());
     }
 }
